[metadata]
name = fb-pop-density
version = 0.0.1
author = Jacob Hall
author_email = email@jacobhall.net
description = Interface with the Facebook high resolution population density datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacobhall/python-fb-pop-density
project_urls =
    Bug Tracker = https://github.com/jacobhall/python-fb-pop-density/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
